@@ -24,7 +24,7 @@ $TACKLER_SH \
     --input.git.ref errs-1E2 \
     --input.git.dir txns/2016/04 \
     --input.git.ext txn \
-    2>&1 | grep 'Tackler error: Configuration .*/tep1016-01-err.toml.*Unknown .* flatter'
+    2>&1 | grep "Tackler error: Configuration .*/tep1016-01-err.toml.*Unknown .* 'flatter'"
 
 echo "check: ok"
 
@@ -41,7 +41,7 @@ $TACKLER_SH \
     --input.git.ref errs-1E2 \
     --input.git.dir txns/2016/04 \
     --input.git.ext txn \
-    2>&1 | grep 'Tackler error: Configuration .*/tep1016-02-err.toml.*Unknown .* bruce'
+    2>&1 | grep "Tackler error: Configuration .*/tep1016-02-err.toml.*Unknown .* 'bruce'"
 
 echo "check: ok"
 
